--- a/app/views/members/_wishlist.haml
+++ b/app/views/members/_wishlist.haml
@@ -1,7 +1,7 @@
 %table.list
   %thead
     %tr
-      %th.fill Item
-      %th.fill Note
+      %th Item
+      %th.note Note
       %th Type
   %tbody
