--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -18,8 +18,11 @@ table.list
     :background-color #EEEEEE
     :padding 4px
     :white-space nowrap
+    :border-bottom 1px solid #E4E4E4
   td
+    :padding 5px
     :vertical-align top
+    :border-right 1px solid #E4E4E4
   tbody
     tr
       &:hover
@@ -28,25 +31,24 @@ table.list
 // Table Cell Types
 th.number, td.number, th.right, td.right
   :text-align right
+th.note, td.note
+  :text-align left
+  :width 75%
 th.member, td.member
   :text-align left
   :min-width 150px
 th.attendance, td.attendance
   :text-align right
   :min-width 80px
-  :max-width 120px
 th.date, td.date
   :text-align left
-  :min-width 100px
-  :max-width 150px
+  :min-width 125px
 th.lootfactor, td.lootfactor
   :text-align right
   :min-width 50px
-  :max-width 125px
 th.image, td.image, th.checkbox, td.checkbox
   :text-align center
   :min-width 16px
-  :max-width 48px
 th.center, td.center
   :text-align center
 th.fill, td.fill
