Add classes to the _raids rows depending on whether or not this raid was in the last x days; I briefly had the rows lose opacity the older they got but this didn't really work out great

--- a/app/views/members/_raids.haml
+++ b/app/views/members/_raids.haml
@@ -7,7 +7,7 @@
       %th.image Thread
   %tbody
     - @raids.each do |raid|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('even', 'odd') + raid_date_classes(raid) }
         %td.date= link_to h(raid.date), raid_path(raid)
         %td.attendance= member_raid_attendance(raid, @member)
         %td.note= h(raid.note)
