--- a/app/views/members/index.haml
+++ b/app/views/members/index.haml
@@ -6,9 +6,9 @@
       %th.attendance 30-Day
       %th.attendance 90-Day
       %th.attendance Lifetime
-      %th.lootfactor LF
-      %th.lootfactor BiS
-      %th.lootfactor SLF
+      %th.lootfactor Loot Factor
+      %th.lootfactor Best in Slot
+      %th.lootfactor Situational
   %tbody
     - @members.each do |member|
       %tr{ :class => cycle('even', 'odd') }
