Move the #member_stats h3 stuff to layout

--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -23,20 +23,9 @@ h2
   a
     :text-decoration none
     
-#member_stats
-  :text-align center
-  :border-bottom 1px solid #BBBBBB
-  :padding-bottom 10px
-  :margin-bottom 10px
-  h3
-    :display inline
-    :font 3em Georgia
-    :margin 0
-    span.small
-      :vertical-align middle
-      :font = 14px Georgia
-      :margin 0 60px 0 -3px
-
+abbr
+  :cursor help
+    
 // WoW Class Colors
 .Death, .Knight
   &, &:link, &:visited
