--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -71,3 +71,17 @@
   :background-color #FFFFFF
   :padding 15px
   :max-width 90%
+  
+#member_stats
+  :text-align center
+  :border-bottom 1px solid #BBBBBB
+  :padding-bottom 10px
+  :margin-bottom 10px
+  h3
+    :display inline
+    :font 3em Georgia
+    :margin 0
+    span.small
+      :vertical-align middle
+      :font = 14px Georgia
+      :margin 0 60px 0 -3px
