Add form haml files; start styling forms; use Sass's @import feature to define a constants file

--- a/app/views/layouts/redesign.haml
+++ b/app/views/layouts/redesign.haml
@@ -4,11 +4,11 @@
   %head
     %title= @page_title || "JuggRails"
     %script{ 'type' => 'text/javascript', :src => "http://www.wowhead.com/widgets/power.js" }
-    = javascript_include_tag 'jquery.js', :cache => true
-    = javascript_include_tag 'jquery.ui.js', :cache => true
-    = javascript_include_tag 'jquery.tabs.js', :cache => true
+    = javascript_include_tag 'jquery.js'
+    = javascript_include_tag 'jquery.ui.js'
+    = javascript_include_tag 'jquery.tabs.js'
     
-    = stylesheet_link_tag 'application', 'basic', 'layout', 'tables', 'tabs'
+    = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs'
   %body#redesign
     #wrapper
       #top-menu
