--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -1,9 +1,12 @@
+@import constants.sass
+
 *
   :padding 0
   :margin 0
 
 body
-  :font 12px "Lucida Grande", Lucida, Verdana, sans-serif
+  :font-size = 12px
+  :font-family "Lucida Grande", Lucida, Verdana, sans-serif
   :margin 0
   :padding 0
   :min-width 600px
