--- a/app/views/members/_form.haml
+++ b/app/views/members/_form.haml
@@ -1,11 +1,16 @@
-  <% form_for @member do |f| %>
-  <%= f.error_messages %>
+- form_for @member do |f|
+  = f.error_messages
   
-  <p><%= f.label :name %><br/>
-  <%= f.text_field :name %></p>
-  
-  <p><%= f.label :wow_class, "Class" %><br/>
-  <%= f.select :wow_class, ['','Death Knight','Druid','Hunter','Mage','Paladin','Priest','Rogue','Shaman','Warlock','Warrior'] %></p>
-  
-  <%= f.submit %>
-  <% end %>
+  %p
+    = f.label :name
+    %br
+    = f.text_field :name
+    = error_message_on(@member, :name)
+  %p
+    = f.label :wow_class, "Class"
+    %br
+    = f.select :wow_class, [''] + Member::WOW_CLASSES
+  %p
+    = f.check_box :active
+    = f.label :active, "Active?"
+  = f.submit
