Multiple style changes - Re-order header links - Show styled flash[:success] or flash[:error] messages - Apply clearfix CSS which may or may not do something - Changed positive/negative colors to match success/error messages - Once again defined the default font family constant

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,24 @@
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
+}
+
 /* jQuery CSS Layout helpers
 ----------------------------------*/
 .ui-helper-clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
@@ -5,4 +26,3 @@
 /* required comment for clearfix to work in Opera \*/
 * html .ui-helper-clearfix { height:1%; }
 .ui-helper-clearfix { display:block; }
-/* end clearfix */
