--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -1,2 +1,3 @@
+!default_font_family     = "\"Lucida Grande\", Lucida, Verdana, sans-serif"
 !table_border_color      = #E4E4E4
 !table_header_background = #EEEEEE
