--- a/app/views/layouts/redesign.haml
+++ b/app/views/layouts/redesign.haml
@@ -10,22 +10,27 @@
     
     = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs'
   %body#redesign
-    #wrapper
-      #top-menu
+    #wrapper.clearfix
+      #top-menu.clearfix
         %ul
           %li= link_to "Juggernaut (US-Mal'Ganis Horde)", '#'
         %ul#right
-          %li= link_to "DKP", '#'
-          %li= link_to "Roster", '#'
-          %li= link_to "Calendar", '#'
-          %li= link_to "Joining", '#'
-          %li= link_to "About Us", '#'
-          %li= link_to "Home", '#'
-      #header
-        #main-menu
+          %li= link_to 'Home', '#'
+          %li= link_to 'About Us', '#'
+          %li= link_to 'Joining', '#'
+          %li= link_to 'Forums', '#'
+          %li= link_to 'Calendar', '#'
+          %li= link_to 'Roster', '#'
+          %li= link_to 'DKP', '#'
+      #header.clearfix
+        #main-menu.clearfix
           %ul
             %li= link_to 'Members', members_path, :class => ( controller.controller_name == 'members' ) ? 'selected' : ''
             %li= link_to 'Items', items_path, :class => ( controller.controller_name == 'items' ) ? 'selected' : ''
             %li= link_to 'Raids', raids_path, :class => ( controller.controller_name == 'raids' ) ? 'selected' : ''
       #main
+        - if flash[:success]
+          .success= flash[:success]
+        - if flash[:error]
+          .error= flash[:error]
         = yield
