--- a/app/views/members/_form.haml
+++ b/app/views/members/_form.haml
@@ -1,16 +1,17 @@
 - form_for @member do |f|
-  = f.error_messages
+  - unless f.error_messages.empty?
+    .error= f.error_messages
   
-  %p
-    = f.label :name
-    %br
-    = f.text_field :name
-    = error_message_on(@member, :name)
-  %p
-    = f.label :wow_class, "Class"
-    %br
-    = f.select :wow_class, [''] + Member::WOW_CLASSES
-  %p
+  = f.label :name
+  = f.text_field :name, :class => 'small'
+  
+  = f.label :wow_class, 'Class'
+  = f.select :wow_class, [''] + Member::WOW_CLASSES
+  
+  .radio-check
     = f.check_box :active
-    = f.label :active, "Active?"
-  = f.submit
+    = f.label :active, 'Active?'
+
+  .buttons
+    = styled_button(:type => 'submit', :style => 'positive', :image => 'tick.png', :text => 'Save')
+    = styled_button(:type => 'reset')
