--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -1,32 +1,80 @@
 @import constants.sass
+@import buttons.css
 
 fieldset
-  :font-size 18px
-  :padding 0 15px 15px 15px
+  :padding 15px
   :border 1px solid
-    :color = !table_border_color
-  :background-color = !table_header_background
+    :color = #BBBBBB
+  / :background-color = !table_header_background
   
   legend.hidden
     :display none
     
   label
-    :font-size 18px
-    
-  input, select, textarea
-    :font-size 18px
-    :padding 5px
-  input
-    :border 1px solid #000
-  input[type=submit]
-    :margin-top 10px
-    
-  p
-    :padding 10px 0
+    :display block
+    :font-size 1.2em
+    :font-weight bold
+    :margin 0 0 5px
   
-div.errorExplanation
-  :font-size 0.8em
-  h2
-    :font-size 1em
-    :color red
-    :margin-bottom 0
+  input, textarea
+    :color #484848
+    :border 1px solid #CCCCCC
+    &:focus
+      :color #000000
+      :border-color #000000
+
+  input, select, textarea
+    :display block
+    :font-size 1.5em
+    :margin 0 0 20px
+    :padding 5px
+    &.small
+      :width 20%
+    &.medium
+      :width 40%
+    &.large
+      :width 60%
+    
+  textarea
+    :font-family = !default_font_family
+    
+  em
+    :display block
+    :color #5C6163
+    :margin -15px 0 12px
+    &.error
+      :font-size 1.1em
+      :font-weight bold
+      :padding 5px
+      :background-color #FAD3C5
+      :border 1px solid #F03A31
+      :color #F03A31
+    
+  // Special cases for divs used for radio/check boxes
+  div.radio-check
+    label
+      :display inline
+      :margin 0
+      
+    input
+      :border 0
+      :display inline
+      :margin 0
+      :padding 0
+      :width auto
+
+    em
+      :display block
+      :margin 0 0 12px
+      
+  div.buttons
+    :margin 15px 0
+
+  // Rails error message summary
+  div.error
+    :margin 0 0 10px 0
+    h2
+      :color red
+      :border-bottom-color red
+    ul
+      :margin 0 20px
