Style Raids#new form

--- a/app/views/members/_form.haml
+++ b/app/views/members/_form.haml
@@ -13,5 +13,5 @@
     = f.label :active, 'Active?'
 
   .buttons
-    = styled_button(:type => 'submit', :style => 'positive', :image => 'tick.png', :text => 'Save')
+    = styled_button(:type => 'submit', :image => 'tick.png', :text => 'Save')
     = styled_button(:type => 'reset')
