Fix some spec quirks with using x.y.ago and time zones (what?!); let us add a raid by text field date rather than date_select

--- a/app/views/raids/new.haml
+++ b/app/views/raids/new.haml
@@ -13,8 +13,8 @@
     - unless f.error_messages.empty?
       .error= f.error_messages
     
-    = f.label :date
-    = date_select(:raid, :date, :default => Date.today)
+    = f.label :date_string
+    = f.text_field :date_string, :class => 'small'
     
     = f.label :note
     = f.text_field :note
