No more 'redesign'

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag 'jquery.ui.js'
     
     = stylesheet_link_tag 'application', 'basic', 'forms', 'layout', 'tables', 'tabs'
-  %body#redesign
+  %body
     #wrapper.clearfix
       #top-menu.clearfix
         %ul
