--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -3,10 +3,7 @@
     $("#member_tabs").tabs();
   });
   
-%h2
-  = link_to 'Members', members_path
-  &raquo;
-  = member_link_colored(@member)
+%h2= breadcrumb link_to('Members', members_path), member_link_colored(@member)
 #member_stats
   %h3
     = member_attendance_colored(@member.attendance_30)
