Rename member_link_colored to link_to_member to be more in line with the built-in link_to method, hopefully making it easier to remember.

--- a/app/views/items/index.haml
+++ b/app/views/items/index.haml
@@ -12,7 +12,7 @@
     - @items.each do |item|
       %tr{ :class => cycle('even', 'odd') }
         %td= link_to_item_with_stats(item)
-        %td= member_link_colored(item.member)
+        %td= link_to_member(item.member)
         %td= item_tell_types(item)
         %td.date= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil?
         %td.number= number_with_precision(item.price, :precision => 2)
