--- a/app/views/members/edit.haml
+++ b/app/views/members/edit.haml
@@ -1,7 +1,7 @@
 %h2
   = link_to 'Members', members_path
   &raquo;
-  = member_link_colored(@member)
+  = link_to_member(@member)
   &raquo;
   Edit
 %fieldset
