--- a/app/views/items/show.haml
+++ b/app/views/items/show.haml
@@ -15,6 +15,6 @@
       - @purchases.each do |item|
         %tr{ :class => cycle('even', 'odd') }
           %td.date= link_to item.raid.date, raid_path(item.raid) unless item.raid.nil?
-          %td.member= member_link_colored(item.member)
+          %td.member= link_to_member(item.member)
           %td.note= item_tell_types(item)
           %td.number= number_with_precision(item.adjusted_price, :precision => 2)
