--- a/app/views/members/new.haml
+++ b/app/views/members/new.haml
@@ -1,7 +1,4 @@
-%h2
-  = link_to 'Members', members_path
-  &raquo;
-  New
+%h2= breadcrumb link_to('Members', members_path), New
 %fieldset
   %legend.hidden New Member
   
