--- a/app/views/raids/index.haml
+++ b/app/views/raids/index.haml
@@ -7,6 +7,7 @@
       %th.number Attendees
       %th.number Drops
       %th.note Note
+      %th.image Actions
   %tbody
     - @raids.each do |raid|
       %tr{ :class => cycle('even', 'odd') }
@@ -14,5 +15,9 @@
         %td.number= raid.attendees.size
         %td.number= raid.items.size
         %td.note= h(raid.note)
+        %td.image
+          / = link_to 'Edit', edit_raid_path(raid)
+          / |
+          = link_to image_tag('delete.png'), raid_path(raid), :confirm => 'Are you sure?', :method => :delete # TODO: Authorize!
 %br
 = will_paginate @items
