@punishments rather than @member.punishments

--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -29,7 +29,7 @@
     / %li= link_to_tab('Basic')
     %li= link_to_tab("Raids (#{@raids.size})")
     %li= link_to_tab("Items (#{@member.items.size})")
-    %li= link_to_tab("Punishments (#{@member.punishments.size})")
+    %li= link_to_tab("Punishments (#{@punishments.size})")
     %li= link_to_tab("Wishlist")
     %li= link_to_tab('Achievements')
   / #basic= render :partial => 'basic'
