--- a/app/views/members/_form.haml
+++ b/app/views/members/_form.haml
@@ -1,17 +1,9 @@
-- form_for @member do |f|
-  - unless f.error_messages.empty?
-    .error= f.error_messages
-  
-  = f.label :name
-  = f.text_field :name, :class => 'small'
-  
-  = f.label :wow_class, 'Class'
-  = f.select :wow_class, Member::WOW_CLASSES
-  
-  .radio-check
-    = f.check_box :active
-    = f.label :active, 'Active?'
+= form.label :name
+= form.text_field :name, :class => 'small'
 
-  .buttons
-    = styled_button(:type => 'submit', :image => 'tick.png', :text => 'Save')
-    = styled_button(:type => 'reset')
+= form.label :wow_class, 'Class'
+= form.select :wow_class, Member::WOW_CLASSES
+
+.radio-check
+  = form.check_box :active
+  = form.label :active, 'Active?'
