--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -15,6 +15,6 @@
         %td= link_to_member(item.member)
         %td= item_tell_types(item)
         %td.date= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil?
-        %td.number= number_with_precision(item.price, :precision => 2)
+        %td.number= number_with_precision(item.adjusted_price, :precision => 2)
 %br
 = will_paginate @items
