--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -1,3 +1,11 @@
 !default_font_family     = "\"Lucida Grande\", Lucida, Verdana, sans-serif"
+!defalut_font_color      = #484848
+
+!top_menu_background = #602020
+!header_background   = #8A4040
+!header_color        = #F8F8F8
+
+!wrapper_background = #FFFFFF
+
 !table_border_color      = #E4E4E4
 !table_header_background = #EEEEEE
