Javascript table sorting for the Members#index table

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,4 +1,7 @@
-%table.list
+:javascript
+  $(document).ready(sortMemberTable);
+
+%table#members.list.tablesorter
   %thead
     %tr
       %th Name
