Add paging to Member#show raids.

--- a/app/views/members/_raids.haml
+++ b/app/views/members/_raids.haml
@@ -12,3 +12,5 @@
         %td.attendance= member_raid_attendance(raid, @member)
         %td.note= h(raid.note)
         %td.image= raid.thread
+%br
+= will_paginate(@raids)
