--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -27,7 +27,7 @@
 #member_tabs
   %ul
     / %li= link_to_tab('Basic')
-    %li= link_to_tab("Raids (#{@raids.size})")
+    %li= link_to_tab("Raids (#{@raids_count})")
     %li= link_to_tab("Items (#{@member.items.size})")
     %li= link_to_tab("Punishments (#{@punishments.size})")
     %li= link_to_tab("Wishlist")
