Add a Users#index so an admin can see a list of users. No control over them, yet.

--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -46,7 +46,7 @@ table.tablesorter
         :background-image url(/images/sort_asc.gif)
       .headerSortDown
         :background-image url(/images/sort_desc.gif)
-      th.note, th.attendance, th.lootfactor
+      th.note, th.attendance, th.lootfactor, th.number, th.right
         :padding-right 20px
 
 // Table Cell Types
