--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,12 +28,12 @@
             %li= link_to 'Raids', raids_path, :class => ( controller.controller_name == 'raids' ) ? 'selected' : ''
             = # TODO: FIXME
             - if current_user && current_user.is_admin?
-              %li= link_to 'Users', users_path, :class => ( controller.controller_name == 'users' ) ? 'selected' : ''
+              / %li= link_to 'Users', users_path, :class => ( controller.controller_name == 'users' ) ? 'selected' : ''
             - if current_user
-              %li= link_to 'My Account', account_path
+              / %li= link_to 'My Account', account_path
               %li= link_to 'Logout', user_session_path, :method => :delete, :confirm => 'Are you sure you want to log out?'
             - else
-              %li= link_to 'Register', new_account_path
+              / %li= link_to 'Register', new_account_path
               %li= link_to 'Log In', new_user_session_path
       #main
         - if flash[:success]
