--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -76,7 +76,7 @@ input[type=hidden]
 // Success/Failure flash notice divs
 div.success, div.error
   :font-size 1.1em
-  :margin 5px 0
+  :margin-bottom 10px
   :padding 10px 15px
 div.success
   :background-color #DFF2D9
