Blehh. Trying to add a clickable span to only show tells of a certain type. Not working perfectly just yet. Amend: Getting closer; once it hides rows without a span it never shows them again. It also bugs out if we Filter BiS with a Rot also present, then click the Rot, then click off either one (it toggles off both). They should be mutually exclusive.

--- a/app/views/members/_items.haml
+++ b/app/views/members/_items.haml
@@ -1,3 +1,9 @@
+:javascript
+  $(document).ready(function() {
+    $('#items span.filter').click(function() {
+      toggleItemTypes(this);
+    });
+  });
 %table.list
   %thead
     %tr
@@ -7,7 +13,7 @@
       %th.number Price
   %tbody
     - @member.items.each do |item|
-      %tr{ :class => cycle('even', 'odd') }
+      %tr{ :class => cycle('even', 'odd') + ' ' + item_row_classes(item) }
         %td= link_to_item_with_stats(item)
         %td= item_tell_types(item)
         %td.date= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil?
