--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -110,6 +110,18 @@ div.error
         :style solid
         :color = !table_header_background - 80
     &.gap
+    
+span
+  &.bis, &.sit, &.rot, &.de
+    :padding-right 14px
+    :background url(/images/bullet_plus.png) no-repeat center right
+    :text-decoration underline
+    :cursor pointer
+  &.shown
+    :padding-right 14px
+    :text-decoration underline
+    :background url(/images/bullet_delete.png) no-repeat center right
+    :cursor pointer
 
 // Progress Bars - http://blog.leetsoft.com/2006/8/22/super-simple-css-bars
 // Also see http://wiki.github.com/paolodona/rails-widgets/progressbar
