--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -111,21 +111,17 @@ div.error
         :color = !table_header_background - 80
     &.gap
     
-#itemfilter
+tbody#itemfilter
   tr
     span
       :padding-right 16px
-      :background url(/images/bullet_left.png) no-repeat center right
-      :text-decoration underline
-      :cursor pointer
-    &.shown
-      span
-        :background url(/images/bullet_delete.png) no-repeat center right
-  / &.shown
-  /   :padding-right 14px
-  /   :text-decoration underline
-  /   :background url(/images/bullet_delete.png) no-repeat center right
-  /   :cursor pointer
+      &:hover
+        :background url(/images/bullet_left.png) no-repeat center right
+        :text-decoration underline
+        :cursor pointer
+  tr.shown
+    span
+      :background url(/images/bullet_delete.png) no-repeat center right
 
 // Progress Bars - http://blog.leetsoft.com/2006/8/22/super-simple-css-bars
 // Also see http://wiki.github.com/paolodona/rails-widgets/progressbar
