--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -28,13 +28,13 @@
   %ul
     / %li= link_to_tab('Basic')
     %li= link_to_tab("Raids (#{@raids_count})")
-    %li= link_to_tab("Items (#{@member.items.size})")
+    %li= link_to_tab("Loots (#{@member.loots.size})")
     %li= link_to_tab("Punishments (#{@punishments.size})")
     %li= link_to_tab("Wishlist")
     %li= link_to_tab('Achievements')
   / #basic= render :partial => 'basic'
   #raids= render :partial => 'raids'
-  #items= render :partial => 'items'
+  #loots= render :partial => 'loots'
   #punishments= render :partial => 'punishments'
   #wishlist= render :partial => 'wishlist'
   #achievements
