--- a/app/views/raids/index.html.haml
+++ b/app/views/raids/index.html.haml
@@ -1,4 +1,4 @@
-= will_paginate @items
+= will_paginate @raids
 %br
 %table.list
   %thead
@@ -13,11 +13,11 @@
       %tr{ :class => cycle('even', 'odd') }
         %td.date= link_to h(raid.date), raid_path(raid)
         %td.number= raid.attendees.size
-        %td.number= raid.items.size
+        %td.number= raid.loots.size
         %td.note= h(raid.note)
         %td.image
           / = link_to 'Edit', edit_raid_path(raid)
           / |
           = link_to image_tag('delete.png'), raid_path(raid), :confirm => 'Are you sure?', :method => :delete # TODO: Authorize!
 %br
-= will_paginate @items
+= will_paginate @raids
