Attempt to optimize some more queries through eager loading; add item type filtering to Raids#show

--- a/app/views/members/_loots.haml
+++ b/app/views/members/_loots.haml
@@ -12,7 +12,7 @@
       %th.date Raid
       %th.number Price
   %tbody#itemfilter
-    - @member.loots.each do |loot|
+    - @loots.each do |loot|
       %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
         %td= link_to_item_with_stats(loot.item)
         %td= loot_tell_types(loot)
