Change 'Drops' to 'Loots'

--- a/app/views/raids/index.html.haml
+++ b/app/views/raids/index.html.haml
@@ -5,7 +5,7 @@
     %tr
       %th.date Date
       %th.number Attendees
-      %th.number Drops
+      %th.number Loots
       %th.note Note
       %th.image Actions
   %tbody
