--- a/app/views/raids/show.html.haml
+++ b/app/views/raids/show.html.haml
@@ -33,7 +33,7 @@
           %th Notes
           %th.number Price
       %tbody#itemfilter
-        - @drops.each do |loot|
+        - @loots.each do |loot|
           %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
             %td= link_to_item_with_stats(loot.item)
             %td.member= link_to_member(loot.buyer)
