--- a/app/views/raids/_drops.html.haml
+++ b/app/views/raids/_drops.html.haml
@@ -17,6 +17,6 @@
     - @loots.each do |loot|
       %tr{ :class => cycle('even', 'odd') + ' ' + loot_row_classes(loot) }
         %td= link_to_item_with_stats(loot.item)
-        %td.member= link_to_member(loot.buyer)
+        %td.member= link_to_member(loot.member)
         %td= loot_tell_types(loot)
         %td.number= number_with_precision(loot.adjusted_price, :precision => 2)
