--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -54,7 +54,7 @@ fieldset
   div.radio-check
     label
       :display inline
-      :margin 0
+      :margin 0 20px 0 0
       
     input
       :border 0
