Where controllers are concerned, s/wishlist/wishlists

--- a/app/views/wishlists/_form.html.haml
+++ b/app/views/wishlists/_form.html.haml
@@ -1,4 +1,4 @@
-- form_for Wishlist.new, :url => member_wishlist_path(@member) do |f|
+- form_for @wishlist do |f|
   - unless f.error_messages.empty?
     .error= f.error_messages
     
